Bug 306815 - Navigation between images broken after saving changes
Summary: Navigation between images broken after saving changes
Status: RESOLVED FIXED
Alias: None
Product: digikam
Classification: Applications
Component: ImageEditor-Workflow (other bugs)
Version First Reported In: 3.0.0
Platform: Arch Linux Linux
: NOR minor
Target Milestone: ---
Assignee: Digikam Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-09-14 22:36 UTC by Nicolas Morange
Modified: 2022-02-03 04:13 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 3.0.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Nicolas Morange 2012-09-14 22:36:08 UTC
When editing images in an album, one can use space/backspace to navigate between them. After saving changes on a picture, space doesn't work. One needs to hit backspace, then space twice to go to the next picture in the album.

Reproducible: Always

Steps to Reproduce:
1. open an image in the imade editor
2. do some changes
3. click "save changes" or "save as new version"
4. hit "space" to move to the next picture...
Actual Results:  
Nothing happens. Hitting backspace (showing the original photo) then space twice shows effectiveley the next picture.

Expected Results:  
The next picture is displayed for editing.
Comment 1 caulier.gilles 2012-09-15 06:23:21 UTC
Yes, fully reproducible here with 3.0.0

Gilles Caulier
Comment 2 NV 2012-09-26 10:37:54 UTC
Hi Giles,

I found the same to be true when trying to click the LEFT/RIGHT arrow buttons or cursor keys. Once back from Image Editor with changes saved, navigation seizes. You need to click on any other thumbnail in the top rail and then it will work again. Feels as if something needs to be refreshed after the change.
Comment 3 Andi Clemens 2012-10-05 08:37:56 UTC
For me it is working, but I see another issue: If I save the changes, both images (orgiginal and modified) are displayed in the editor, in the thumbbar and by navigating with space and backspace. If I close the editor and open it again, only the modified version is shown.
Comment 4 Marcel Wiesweg 2012-10-06 20:57:44 UTC
Git commit 28f01e58dfd4edb81ad32f88b98ad43bd0d83ea5 by Marcel Wiesweg.
Committed on 06/10/2012 at 22:54.
Pushed by mwiesweg into branch 'master'.

Sort filter model when an image is synchronously added to the editor's image model.

Navigation was broken because in the immediate event loop scope, the new image was the last,
so forward was disabled.
When the asynchronous operation in the model finished shortly afterwards, the filter model is resorted,
so we never saw the problem.
FIXED-IN: 3.0

M  +2    -1    NEWS
M  +2    -9    utilities/imageeditor/main/imagewindow.cpp
M  +9    -0    utilities/imageeditor/main/imagewindow_p.h

http://commits.kde.org/digikam/28f01e58dfd4edb81ad32f88b98ad43bd0d83ea5