Sort filter model when an image is synchronously added to the editor's image model.

Navigation was broken because in the immediate event loop scope, the new image was the last,
so forward was disabled.
When the asynchronous operation in the model finished shortly afterwards, the filter model is resorted,
so we never saw the problem.

BUG: 306815
FIXED-IN: 3.0